--- a/milene/index.html
+++ b/milene/index.html
@@ -7,7 +7,10 @@
     <title>alura plus</title>
     <link rel="stylesheet" href="stile.css">
 </head>
+
 <body>
-    <img src="/alura-plus-main/" alt="">
+<h1>com o combo+, voce pode aproveitar a alura+ e o alura lingua por um preço unico.</h1>
+<img src="img/combo.png" alt="o combo+ e a junçao do alura+ e o alura lingua>"
 </body>
+
 </html>
